--- a/index.ipynb
+++ b/index.ipynb
@@ -432,12 +432,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7f322a177b38>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "la_boca_marker = neighborhood_markers[-1]\n",
-    "la_boca"
+    "la_boca_marker"
    ]
   },
   {
